Fixed alignment in proposal edit view

--- a/portlets/proposals-portlet/src/main/webapp/css/proposals.css
+++ b/portlets/proposals-portlet/src/main/webapp/css/proposals.css
@@ -115,7 +115,7 @@ div.sponsorLogo img {
 .addpropInputContainer {
   float: right;
   font-size: 16px;
-  width: 490px;
+  width: 830px;
   /*padding: 5px;*/
   position: relative;
 }
