--- a/themes/wh-theme/src/main/webapp/css/style/pages/_proposals.scss
+++ b/themes/wh-theme/src/main/webapp/css/style/pages/_proposals.scss
@@ -603,12 +603,12 @@
 
 .addpropform input {
   height: 42px;
-  width: 445px;
+  width: 830px;
   padding: 0 5px;
 }
 
 .addpropform textarea {
-  width: 440px;
+  width: 830px;
   padding: 5px;
 }
 
@@ -641,7 +641,7 @@
 .addprophelp {
   background: url(../images/icon-addprop-arrow.png) no-repeat 0 3px;
   float: right;
-  width: 454px;
+  width: 820px;
   padding: 0 0 5px 11px;
   color: $dark-grey;
 }
